--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
                     <td>&#8377 35</td>
                 </tr>
                 <tr>
-                    <td>Pakaoda</td>
+                    <td>onion Pakaoda</td>
                     <td>&#8377 30</td>
                 </tr>
                 <tr>
